--- a/roles/btrbk/tasks/install.yml
+++ b/roles/btrbk/tasks/install.yml
@@ -7,5 +7,5 @@
   register: __btrbk_install
   ignore_errors: true
 
-- include: install_from_source.yml
+- include_tasks: install_from_source.yml
   when: __btrbk_install.failed
