--- a/roles/btrbk/tasks/main.yml
+++ b/roles/btrbk/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
-- include: install.yml
-  become: true
+
+- include_tasks: install.yml
   tags: ["install"]
 
-- include: configure.yml
-  become: true
+- include_tasks: configure.yml
   tags: ["configure"]
