--- a/roles/node_exporter/tasks/main.yml
+++ b/roles/node_exporter/tasks/main.yml
@@ -1,16 +1,13 @@
 ---
-- include: install.yml
-  become: true
+- include_tasks: install.yml
   when:
     - not node_exporter_skip_install
   tags: ["install"]
 
-- include: configure.yml
-  become: true
+- include_tasks: configure.yml
   tags: ["configure"]
 
 - name: ensure node_exporter service is started and enabled
-  become: true
   systemd:
     daemon_reload: true
     name: node_exporter
