--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,15 +1,7 @@
 ---
 
-- name: Get localhost hostname
-  delegate_to: localhost
-  command: hostname
-  register: _local_hostname
-  check_mode: false
-  ignore_errors: true
-  tags: ["set-local"]
-
 - name: Set local connection if needed
   set_fact:
     ansible_connection: local
-  when: _local_hostname.stdout | lower == inventory_hostname | lower
+  when: (lookup('pipe', 'hostname') | lower) == (inventory_hostname | lower)
   tags: ["set-local"]
