--- a/playbooks/webgw.yml
+++ b/playbooks/webgw.yml
@@ -110,6 +110,23 @@
     - role: certbot
       tags: ["certbot"]
 
+    - role: certbot
+      vars:
+        certbot_domains:
+          - "{{ domains[4] }},*.{{ domains[4] }}"
+        certbot_credentials_path: "/etc/letsencrypt/cloudflare.ini"
+        certbot_credentials_content: |
+          dns_cloudflare_api_token = {{ vault_dns_cloudflare_api_token }}
+
+        certbot_generate_command: >
+          certbot certonly
+          --authenticator dns-cloudflare
+          --dns-cloudflare-credentials {{ certbot_credentials_path }}
+          -n
+          --keep
+          --expand
+      tags: ["certbot-cloudflare"]
+
     - role: nginx
       tags: ["nginx"]
 
