--- a/playbooks/prom.yml
+++ b/playbooks/prom.yml
@@ -2,9 +2,6 @@
 
 - hosts: prom
   gather_facts: true
-  vars:
-    # To ensure it takes presedence over "internal"
-    _webgw_zone: "0-webgw"
   pre_tasks:
     - block:
         - name: Disable some default services
@@ -47,32 +44,6 @@
             - "{{ pushgateway_port }}"
           notify: reload firewalld
 
-        - name: Create webgw zone
-          firewalld:
-            zone: "{{ _webgw_zone }}"
-            permanent: true
-            state: present
-          notify: reload firewalld
-
-        - name: Add webgw sources
-          firewalld:
-            zone: "{{ _webgw_zone }}"
-            source: "{{ hostvars[item].wireguard_ip | default(hostvars[item].ansible_host) }}"
-            permanent: true
-            state: enabled
-          loop: "{{ groups['webgw'] }}"
-          notify: reload firewalld
-
-        - name: Allow ports to webgw zone
-          firewalld:
-            zone: "{{ _webgw_zone }}"
-            port: "{{ item }}/tcp"
-            permanent: true
-            state: enabled
-          loop:
-            - "{{ grafana_port }}"
-          notify: reload firewalld
-
       tags: ["firewalld"]
 
     - name: Install requirements for aquaero exporter
@@ -86,6 +57,9 @@
   roles:
     - role: setup_disks
       tags: ["disk"]
+
+    - role: firewalld_webgw
+      tags: ["firewalld"]
 
     - role: prometheus
       tags: ["prometheus"]
