--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -100,6 +100,10 @@ prometheus_scrape_configs:
         labels:
           instance: "{{ hostvars['gitlab01'].inventory_hostname }}"
 
+      - targets: ["{{ hostvars['nextcloud01'].ansible_host }}:{{ hostvars['nextcloud01'].node_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['nextcloud01'].inventory_hostname }}"
+
       - targets: ["{{ hostvars['drepi'].ansible_host }}:{{ hostvars['drepi'].node_exporter_port }}"]
         labels:
           instance: "{{ drepi_label }}"
