--- a/group_vars/webgw/nginx/vhosts.yml
+++ b/group_vars/webgw/nginx/vhosts.yml
@@ -16,3 +16,7 @@ nginx_vhosts:
   - filename: nextcloud.conf
     server_name: nextcloud
     template: "{{ inventory_dir }}/files/webgw/nginx/nextcloud.conf.j2"
+
+  - filename: plex.conf
+    server_name: plex
+    template: "{{ inventory_dir }}/files/webgw/nginx/plex.conf.j2"
