--- a/playbooks/esxi.yml
+++ b/playbooks/esxi.yml
@@ -28,7 +28,7 @@
 - hosts: esxi
   gather_facts: false
   tasks:
-    - name: Set guest power state
+    - name: Power on guests
       delegate_to: localhost
       community.vmware.vmware_guest:
         hostname: "{{ hostvars['slb'].ansible_host }}"
@@ -36,12 +36,23 @@
         password: "{{ hostvars['slb'].esxi_password }}"
         validate_certs: false
         uuid: "{{ vm_uuid }}"
-        state: "{{ 'poweredon' if _have_start else 'shutdownguest' }}"
-      vars:
-        _have_start: "{{ 'start' in ansible_run_tags }}"
-        _have_stop: "{{ 'stop' in ansible_run_tags }}"
-      when: _have_start or _have_stop
-      tags: ["start", "stop"]
+        state: 'poweredon'
+      when: "'start' in ansible_run_tags"
+      tags: ["start"]
+
+    - name: Power down guests
+      delegate_to: localhost
+      community.vmware.vmware_guest:
+        hostname: "{{ hostvars['slb'].ansible_host }}"
+        username: "{{ hostvars['slb'].esxi_username }}"
+        password: "{{ hostvars['slb'].esxi_password }}"
+        validate_certs: false
+        uuid: "{{ vm_uuid }}"
+        state: 'shutdownguest'
+      when:
+        - "'stop' in ansible_run_tags"
+        - hostvars[inventory_hostname]['summary.runtime.powerState'] != 'poweredOff'
+      tags: ["stop"]
 
 - hosts: esxi_hosts
   gather_facts: false
