--- a/roles/node_exporter/defaults/main.yml
+++ b/roles/node_exporter/defaults/main.yml
@@ -12,3 +12,6 @@ node_exporter_no_collectors: []
 node_exporter_web_listen_address: "0.0.0.0:9100"
 
 node_exporter_required_services: []
+
+node_exporter_config_firewall: true
+node_exporter_allow_ip: 'any'
