--- a/group_vars/servers/vars.yml
+++ b/group_vars/servers/vars.yml
@@ -14,4 +14,4 @@ smtp_config: "{{ vault_smtp_config }}"
 
 firewall_frontend: 'firewalld'
 node_exporter_config_firewall: true
-node_exporter_allow_ip: "{{ hostvars['prom01'].ansible_host }}"
+node_exporter_allow_ips: "{{ groups['prom'] | map('extract', hostvars, 'ansible_host') | list }}"
